<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- draw a shadow below the toolbar -->

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- toolbar -->

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"/>

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- loading views -->

            <LinearLayout
                android:id="@+id/loadingContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:layout_width="@dimen/progressbar_size_default"
                    android:layout_height="@dimen/progressbar_size_default"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/text_hint"/>

            </LinearLayout>

            <!-- nothing found views -->

            <LinearLayout
                android:id="@+id/emptyContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/imageview_size_default"
                    android:layout_height="@dimen/imageview_size_default"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_sad"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_tankstellen"
                    android:textColor="@color/text_hint"/>

            </LinearLayout>

            <!-- error views -->

            <LinearLayout
                android:id="@+id/errorContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/imageview_size_default"
                    android:layout_height="@dimen/imageview_size_default"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_error"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/error"
                    android:textColor="@color/text_hint"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_size_default"/>

                <Button
                    android:id="@+id/errorRetryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/retry"/>

            </LinearLayout>

            <!-- list with stations -->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/resultsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/padding_list_bottom"
                android:paddingTop="@dimen/padding_list_top"/>

        </FrameLayout>

    </LinearLayout>

    <!-- search button -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/searchFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/margin_normal"
        android:scaleType="fitXY"
        android:src="@drawable/ic_filter"/>

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha"
        android:clickable="true"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/searchcontainerBackButton"
                    android:layout_width="?android:attr/actionBarSize"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="@dimen/padding_normal"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_arrow_left"/>

                <EditText
                    android:id="@+id/searchcontainerSearchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_default"
                    android:gravity="center_vertical"
                    android:hint="@string/search_input_hint"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/textsize_input"/>

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/searchContainerErrorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/imageview_size_default"
                    android:layout_height="@dimen/imageview_size_default"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_error"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/error"
                    android:textColor="@color/text_hint"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/searchContainerLoadingContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <ProgressBar
                    android:layout_width="@dimen/progressbar_size_default"
                    android:layout_height="@dimen/progressbar_size_default"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/text_hint"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/searchContainerEmptyContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/imageview_size_default"
                    android:layout_height="@dimen/imageview_size_default"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_sad"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_locations"
                    android:textColor="@color/text_hint"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/searchcontainerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>

        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
